# prompt-bom

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/repos/: git_repo.rs  jsonl_reader.rs  mod.rs
src/schemas/: attribution.rs  mod.rs  spdx.rs
src/services/: blame.rs  mod.rs  spdx_emit.rs  transcript.rs
tests/: blame_join.rs  emit_spdx.rs  parse_transcript.rs  proptest_parser.rs  smoke.rs
tests/fixtures/: claude_code_sample.jsonl  expected_emit.json
